--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Tasky</string>
+    <string name="welcome_back">Welcome Back!</string>
+    <string name="log_in">LOG IN</string>
+    <string name="dont_have_an_account">"DON'T HAVE AN ACCOUNT? "</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="email_address_is_valid">Email Address is Valid</string>
+    <string name="show_password">Show Password</string>
 </resources>
