--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="network_error_check_your_internet_connection">Network error: check your internet connection!</string>
     <string name="server_error_try_again_later">Server error, try again later!</string>
     <string name="failed_to_write_data_to_local_device_is_your_storage_full">Failed to write data to local device, is your storage full?</string>
+    <string name="add_new_agenda_item">Add new agenda item</string>
+    <string name="open">Open</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
 </resources>
