feat: Added Photo Detail UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="edit_task">EDIT TASK</string>
     <string name="delete_event">DELETE EVENT</string>
     <string name="delete_reminder">DELETE REMINDER</string>
+    <string name="delete_photo">Delete photo</string>
+    <string name="photo">Photo</string>
 </resources>
