--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,16 @@
     <string name="photo">Photo</string>
     <string name="close_add_visitor_dialog">Close Add Visitor dialog</string>
     <string name="add_visitor">Add visitor</string>
+    <string name="to">To</string>
+    <string name="from">From</string>
+    <string name="at">At</string>
+    <string name="reminder_at">Reminder at</string>
+    <string name="open_agenda_menu">Open agenda menu</string>
+    <string name="ten_minutes_before">10 minutes before</string>
+    <string name="thirty_minutes_before">30 minutes before</string>
+    <string name="one_hour_before">1 hour before</string>
+    <string name="six_hours_before">6 hours before</string>
+    <string name="one_day_before">1 day before</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
