feat: styled date and time picker dialogs, added time switching to agenda month, updated rows properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,7 @@
     <string name="one_day_before">1 day before</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="change_date">Change date</string>
+    <string name="no_agenda_items_scheduled">No agenda items scheduled!</string>
+    <string name="today">Today</string>
 </resources>
