--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="change_date">Change date</string>
     <string name="no_agenda_items_scheduled">No agenda items scheduled!</string>
     <string name="today">Today</string>
+    <string name="photos">Photos</string>
 </resources>
