--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,8 @@
     <string name="reminder_notification_description">%1$s happening at: %2$s</string>
     <string name="no_title">No title added…</string>
     <string name="no_description_added">No description added…</string>
+    <string name="failed_save_task">Failed to save task due to a server error.</string>
+    <string name="save_task">Saved task.</string>
+    <string name="deleted_task">Deleted task.</string>
+    <string name="failed_delete_task">Failed to delete task due to a server error.</string>
 </resources>
