--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="go_back">Go back</string>
     <string name="save">Save</string>
     <string name="delete_task">DELETE TASK</string>
+    <string name="delete_task_alert_dialog_title">Delete Task</string>
     <string name="edit_task">EDIT TASK</string>
     <string name="delete_event">DELETE EVENT</string>
     <string name="delete_reminder">DELETE REMINDER</string>
@@ -74,4 +75,5 @@
     <string name="save_task">Saved task.</string>
     <string name="deleted_task">Deleted task.</string>
     <string name="failed_delete_task">Failed to delete task due to a server error.</string>
+    <string name="confirm_task_delete">Are you sure you want to delete this task?</string>
 </resources>
