--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="save">Save</string>
     <string name="delete_task">DELETE TASK</string>
     <string name="delete_task_alert_dialog_title">Delete Task</string>
+    <string name="delete_agenda_alert_dialog_title">Delete Agenda</string>
     <string name="edit_task">EDIT TASK</string>
     <string name="delete_event">DELETE EVENT</string>
     <string name="delete_reminder">DELETE REMINDER</string>
@@ -76,4 +77,5 @@
     <string name="deleted_task">Deleted task.</string>
     <string name="failed_delete_task">Failed to delete task due to a server error.</string>
     <string name="confirm_task_delete">Are you sure you want to delete this task?</string>
+    <string name="confirm_agenda_delete">Are you sure you want to delete this agenda item?</string>
 </resources>
