--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,8 +79,10 @@
     <string name="save_reminder">Saved reminder.</string>
     <string name="deleted_task">Deleted task.</string>
     <string name="deleted_reminder">Deleted reminder.</string>
+    <string name="deleted_agenda">Deleted agenda item.</string>
     <string name="failed_delete_task">Failed to delete task due to a server error.</string>
     <string name="failed_delete_reminder">Failed to delete reminder due to a server error.</string>
+    <string name="failed_delete_agenda">Failed to delete agenda item due to a server error.</string>
     <string name="confirm_task_delete">Are you sure you want to delete this task?</string>
     <string name="confirm_agenda_delete">Are you sure you want to delete this agenda item?</string>
     <string name="confirm_reminder_delete">Are you sure you want to delete this reminder?</string>
