--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="delete_task_alert_dialog_title">Delete Task</string>
     <string name="delete_agenda_alert_dialog_title">Delete Agenda</string>
     <string name="delete_reminder_alert_dialog_title">Delete Reminder</string>
+    <string name="delete_event_alert_dialog_title">Delete Event</string>
     <string name="edit_task">EDIT TASK</string>
     <string name="delete_event">DELETE EVENT</string>
     <string name="delete_reminder">DELETE REMINDER</string>
@@ -80,10 +81,13 @@
     <string name="deleted_task">Deleted task.</string>
     <string name="deleted_reminder">Deleted reminder.</string>
     <string name="deleted_agenda">Deleted agenda item.</string>
+    <string name="deleted_event">Deleted event.</string>
     <string name="failed_delete_task">Failed to delete task due to a server error.</string>
     <string name="failed_delete_reminder">Failed to delete reminder due to a server error.</string>
     <string name="failed_delete_agenda">Failed to delete agenda item due to a server error.</string>
+    <string name="failed_delete_event">Failed to delete event due to a server error.</string>
     <string name="confirm_task_delete">Are you sure you want to delete this task?</string>
     <string name="confirm_agenda_delete">Are you sure you want to delete this agenda item?</string>
     <string name="confirm_reminder_delete">Are you sure you want to delete this reminder?</string>
+    <string name="confirm_event_delete">Are you sure you want to delete this event?</string>
 </resources>
