--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,5 @@
     <string name="confirm_agenda_delete">Are you sure you want to delete this agenda item?</string>
     <string name="confirm_reminder_delete">Are you sure you want to delete this reminder?</string>
     <string name="confirm_event_delete">Are you sure you want to delete this event?</string>
+    <string name="could_not_upload_file_due_to_it_being_too_large">Could not upload file due to it being too large</string>
 </resources>
