--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,7 @@
     <string name="confirm_reminder_delete">Are you sure you want to delete this reminder?</string>
     <string name="confirm_event_delete">Are you sure you want to delete this event?</string>
     <string name="could_not_upload_file_due_to_it_being_too_large">Could not upload file due to it being too large</string>
+    <string name="added_attendee_success">Added attendee %s to event successfully!</string>
+    <string name="failed_to_find_attendee">Attendee with email %s could not be found.</string>
+    <string name="failed_to_add_attendee">Attendee with email %s could not be added.</string>
 </resources>
