--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,8 +41,11 @@
     <string name="remove_attendee_alert_dialog_title">Remove Attendee</string>
     <string name="delete_reminder_alert_dialog_title">Delete Reminder</string>
     <string name="delete_event_alert_dialog_title">Delete Event</string>
+    <string name="leave_event_alert_dialog_title">Leave Event</string>
     <string name="edit_task">EDIT TASK</string>
     <string name="delete_event">DELETE EVENT</string>
+    <string name="leave_event">LEAVE EVENT</string>
+    <string name="join_event">JOIN EVENT</string>
     <string name="delete_reminder">DELETE REMINDER</string>
     <string name="delete_photo">Delete photo</string>
     <string name="photo">Photo</string>
@@ -94,6 +97,7 @@
     <string name="confirm_removing_attendee">Are you sure you want to remove this attendee from the event?</string>
     <string name="confirm_reminder_delete">Are you sure you want to delete this reminder?</string>
     <string name="confirm_event_delete">Are you sure you want to delete this event?</string>
+    <string name="confirm_leave_event">Are you sure you want to leave this event?</string>
     <string name="could_not_upload_file_due_to_it_being_too_large">Could not upload file due to it being too large</string>
     <string name="added_attendee_success">Added attendee %s to event successfully!</string>
     <string name="failed_to_find_attendee">Attendee with email %s could not be found.</string>
